fixed top-nav and clipped logo

--- a/css/master.less
+++ b/css/master.less
@@ -52,13 +52,12 @@ ul.plain{
 }
 
 #top-nav{
-	position: absolute;
-	top: 0;
-	width: 100%;
-	background: @bg-dark-green;
+	// position: absolute;
+	// top: 0;
+	// width: 100%;
+	background: @bg-dark-green url(../images/top-nav-bg.png) left top no-repeat;
 	.box-shadow(inset 0 0 8px fade(black, 10%));
 	color: @pattern-light-green;
-	z-index: 1;
 	font-size: unit(14/@font-size-base, em);
 	padding: 5px 0;
 	p{
@@ -75,13 +74,15 @@ ul.plain{
 
 header{
 	position: relative;
-	z-index: 2;
-	background: transparent url('../images/chips-top-alt.png') left top no-repeat;
+	background: transparent url('../images/chips-top-alt.png') left -40px no-repeat;
 	.navbar-header{
 		a.navbar-brand{
 			height: auto;
 			padding: 0 15px;
 			margin-left: -70px !important;
+			@media(max-width: 1050px){
+				margin-left: -15px !important;
+			}
 		}
 		.navbar-toggle{
 			margin-top: 33px;
